--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -10,6 +10,7 @@
 @import "components/_comments";
 @import "components/_forms";
 @import "components/_grid";
+@import "components/_slick";
 @import "components/_wp-classes";
 @import "layouts/_header";
 @import "layouts/_sidebar";
