--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,4 +1,5 @@
 @import "common/_variables";
+@import "common/_mixins";
 
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
